commit Practice